# code/api-gateway/docs/swagger.yaml
@@ -18,6 +18,23 @@ definitions:
 info:
   contact: {}
 paths:
+  /orders:
+    get:
+      consumes:
+      - application/json
+      description: 微服务模块 Order 中提供的获取订单列表服务
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: '{"code":200,"data":{},"msg":"ok"}'
+          schema:
+            type: string
+      security:
+      - ApiKeyAuth: []
+      summary: 获取订单列表
+      tags:
+      - Order 服务
   /user/login:
     post:
       consumes:
@@ -62,4 +79,13 @@ paths:
       summary: 用户注册
       tags:
       - User 服务
+securityDefinitions:
+  ApiKeyAuth:
+    in: header
+    name: Authorization
+    type: apiKey
+  OAuth2Password:
+    flow: password
+    tokenUrl: https://example.com/oauth/token
+    type: oauth2
 swagger: "2.0"
